; ModuleID = '/home/carl/AnghaBench/mruby/src/extr_gc.c_add_gray_list.c'
source_filename = "/home/carl/AnghaBench/mruby/src/extr_gc.c_add_gray_list.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { %struct.RBasic* }
%struct.RBasic = type { i64, %struct.RBasic* }

@MRB_TT_MAXDEFINE = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, %struct.TYPE_3__*, %struct.RBasic*)* @add_gray_list to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @add_gray_list(i32* %0, %struct.TYPE_3__* %1, %struct.RBasic* %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca %struct.TYPE_3__*, align 8
  %6 = alloca %struct.RBasic*, align 8
  store i32* %0, i32** %4, align 8
  store %struct.TYPE_3__* %1, %struct.TYPE_3__** %5, align 8
  store %struct.RBasic* %2, %struct.RBasic** %6, align 8
  %7 = load %struct.RBasic*, %struct.RBasic** %6, align 8
  %8 = call i32 @paint_gray(%struct.RBasic* %7)
  %9 = load %struct.TYPE_3__*, %struct.TYPE_3__** %5, align 8
  %10 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %9, i32 0, i32 0
  %11 = load %struct.RBasic*, %struct.RBasic** %10, align 8
  %12 = load %struct.RBasic*, %struct.RBasic** %6, align 8
  %13 = getelementptr inbounds %struct.RBasic, %struct.RBasic* %12, i32 0, i32 1
  store %struct.RBasic* %11, %struct.RBasic** %13, align 8
  %14 = load %struct.RBasic*, %struct.RBasic** %6, align 8
  %15 = load %struct.TYPE_3__*, %struct.TYPE_3__** %5, align 8
  %16 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %15, i32 0, i32 0
  store %struct.RBasic* %14, %struct.RBasic** %16, align 8
  ret void
}

declare dso_local i32 @paint_gray(%struct.RBasic*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
